fixing issue where projects arent clickable on ios

--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,7 @@ button:focus {
 .projects_inner {
   margin-bottom: -30px; }
 
+
 .projects_item {
   position: relative;
   border-radius: 5px;
@@ -476,6 +477,7 @@ button:focus {
     height: 100%;
     opacity: 0;
     transition: all 300ms ease; }
+
   .projects_item .projects_text {
     position: absolute;
     width: 100%;
@@ -502,7 +504,8 @@ button:focus {
       -o-transition: all 0.4s ease 0s;
       transition: all 0.4s ease 0s;
       text-transform: uppercase;
-      cursor: pointer; }
+      cursor: pointer;
+    }
     .projects_item .projects_text p {
       margin-bottom: 0px;
       font-size: 15px;
